# benchmark_vmec

./: .codecov.yml  .gitignore  CLAUDE.md  README.md  README_benchmark.md  TODO.md  compare_asymmetric_debug.sh  compare_jvmec_simple.py  compare_symmetric_debug.sh  compare_vmec_implementations.py  create_inputs_dir.sh  demo_jvmec_comparison.f90  demo_jvmec_comparison_ITER_hybrid_lasym_T.md  demo_jvmec_comparison_cth_like_fixed_bdy_lasym_F.md  demo_jvmec_comparison_up_down_asymmetric_tokamak_lasym_T.md  fpm.toml  input.SOLOVEV_asym  inputs.md  jvmec_benchmark_summary.md  jvmec_netcdf_comparison.md  pyproject.toml  run_comprehensive_benchmark.sh  run_specific_benchmarks.sh  test_asymmetric.txt  test_fourier_comparison.txt  test_jvmec_summary.md  test_netcdf.f90  test_symmetric.txt
.github/workflows/: ci.yml
app/: jvmec_test.f90  main.f90  vmec-build.f90
asymmetric_debug_20250719_081339/educational_vmec/: input_clean.test  input_clean2.test
asymmetric_debug_20250719_081339/jvmec/: input_cleaned.txt
asymmetric_debug_20250719_083632/jvmec/: input_cleaned.txt
design/: PR.md  REVERT.md  VMEC_INPUT_OUTPUT_COMPARISON.md  boundaries.md  fourier_asymmetric.md  fourier_coefficients.md  guess_axis.md  handover_storage.md  ideal_mhd_model.md  index.md  jvmec_compatible_results.md  output_quantities.md  vmec_indata.md  vmec_indata_pywrapper.md  vmec_main.md
doc/: README.md
src/: benchmark_runner.f90  educational_vmec_implementation.f90  hdf5_reader.f90  jvmec_comparison.f90  jvmec_implementation.f90  repository_manager.f90  results_comparator.f90  vmec2000_implementation.f90  vmec_benchmark_types.f90  vmec_implementation_base.f90  vmecpp_implementation.f90  wout_reader.f90
src/vmec_benchmark/: __init__.py  (+4 more)
test/: test_educational_vmec_input.f90  test_jvmec_comparison.f90  test_repository_manager.f90  test_runner_reporting.f90  test_vmec_types.f90
(+23 files in other folders)
